[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UI/BonfireMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/BonfireTravelMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/ItemAcquiredBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/DialogueBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/UserInterface.gd" type="Script" id=7]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="BonfireMenu" parent="." instance=ExtResource( 1 )]

[node name="BonfireTravelMenu" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="ItemAcquiredBox" parent="." instance=ExtResource( 4 )]

[node name="DialogueBox" parent="." instance=ExtResource( 5 )]

[node name="PauseMenu" parent="." instance=ExtResource( 6 )]

[connection signal="hide" from="BonfireMenu" to="." method="_on_BonfireMenu_hide"]
[connection signal="pressed" from="BonfireMenu/VBoxContainer/Travel" to="." method="_on_Travel_pressed"]

[editable path="BonfireMenu"]
